--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <body>
     <header class="main-header">
-      <h1>Welcome to Katik</h1>
-      <p>Hai Sobat Selamat Datang di Kotik :)</p>
+      <h1>Welcome to My Project</h1>
+      <p>Hi Welcome To My Mini Project</p>
     </header>
 
     <main>
@@ -61,19 +61,21 @@
 
         <aside>
           <header>
-            <h1 class="luas-segitiga-header">Luas Segitiga</h1>
+            <h1 class="luas-jajar-genjang-header">Luas Jajar Genjang</h1>
           </header>
 
-          <article class="luas-segitiga-content">
-            <div class="luas-segitiga-img"></div>
-            <p>Rumus Luas Segitiga</p>
+          <article class="luas-jajar-genjang-content">
+            <div class="luas-jajar-genjang-img"></div>
+            <p>Rumus Luas JajarGenjang</p>
           </article>
 
           <hr />
 
           <form>
             <header>
-              <h1 class="luas-segitiga-form-header">Hitung Luas Segitiga</h1>
+              <h1 class="luas-jajar-genjang-form-header">
+                Hitung Luas Jajar Genjang
+              </h1>
             </header>
 
             <div class="input-wrapper">
