--- a/index.html
+++ b/index.html
@@ -46,16 +46,29 @@
             </header>
 
             <div class="input-wrapper">
-              <label for="panjang alas">Panjang Alas:</label>
-              <input id="panjang alas" type="number" />
+              <label for="alas_segitiga">Panjang Alas:</label>
+              <input id="alas_segitiga" type="number" />
             </div>
             <div class="input-wrapper">
-              <label for="tinggi">Tinggi:</label>
-              <input id="tinggi" type="number" />
+              <label for="tinggi_segitiga">Tinggi:</label>
+              <input id="tinggi_segitiga" type="number" />
             </div>
-
-            <p id="result">Hasil Perhitungan</p>
-            <button>Hitung</button>
+            <div class="input-wrapper">
+              <label for="luas_segitiga">Luas:</label>
+              <input
+                id="luas_segitiga"
+                type="text"
+                name="luas"
+                disabled="true"
+              />
+            </div>
+            <p>
+              <input
+                type="button"
+                value="Hitung"
+                onclick="hitungLuasSegitiga()"
+              />
+            </p>
           </form>
         </aside>
 
@@ -79,19 +92,34 @@
             </header>
 
             <div class="input-wrapper">
-              <label for="panjang alas">Panjang Alas:</label>
-              <input id="panjang alas" type="number" />
+              <label for="alas_jajar_genjang">Panjang Alas:</label>
+              <input id="alas_jajar_genjang" type="number" name="alas" />
             </div>
             <div class="input-wrapper">
-              <label for="tinggi">Tinggi:</label>
-              <input id="tinggi" type="number" />
+              <label for="tinggi_jajar_genjang">Tinggi:</label>
+              <input id="tinggi_jajar_genjang" type="number" name="tinggi" />
+            </div>
+            <div class="input-wrapper">
+              <label for="luas_jajar_genjang">Luas:</label>
+              <input
+                id="luas_jajar_genjang"
+                type="text"
+                name="luas"
+                disabled="true"
+              />
             </div>
 
-            <p id="result">Hasil Perhitungan</p>
-            <button>Hitung</button>
+            <p>
+              <input
+                type="button"
+                value="Hitung"
+                onclick="hitungLuasJajarGenjang()"
+              />
+            </p>
           </form>
         </aside>
       </section>
     </main>
+    <script src="js\script.js"></script>
   </body>
 </html>
